--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -6,6 +6,9 @@
     </head>
 
     <body>
+    <section class="top">
+      <img src="https://upload.wikimedia.org/wikipedia/en/c/ce/Etsy_logo.png" />
+    </section>
 
     <section class="nav-bar">
       <div class="header"></div>
@@ -24,6 +27,8 @@
 
 
     </section>
+
+    <div class="wrapper">
 
     <div class="middle">
       <h2>Show results for:</h2>
@@ -51,6 +56,8 @@
     </section>
       </div>
 
+    <div class="lists">
+      <h2>Top results for "whiskey"</h2>
     <section class="list-items">
     <ul>
         <% items.each do |x| %>
@@ -67,8 +74,8 @@
     </ul>
 
 </section>
-
-
+    </div>
+    </div>
 
     </body>
 
