finished with main section

--- a/lib/public/main.css
+++ b/lib/public/main.css
@@ -123,3 +123,13 @@ body {
     width: 75px;
     height: 60px;
 }
+
+.top {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.top form {
+    display: inline-block;
+    vertical-align: middle;
+}
