--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -8,6 +8,10 @@
     <body>
     <section class="top">
       <img src="https://upload.wikimedia.org/wikipedia/en/c/ce/Etsy_logo.png" />
+      <form>
+        <input type="text" placeholder="Search..." required>
+        <input type="button" value="Search">
+      </form>
     </section>
 
     <section class="nav-bar">
